# basic-usage-of-e-stat

./: README.md  pyproject.toml
src/: 2024-11-19-basic.ipynb  pandas_profiling_report.html
