[project]
name = "basic-usage-of-e-stat"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=1.14.0",
    "notebook>=7.2.2",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "plotly>=5.24.1",
    "ydata-profiling>=4.12.0",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "scipy>=1.13.1",
    "scikit-learn>=1.5.2",
    "tqdm>=4.67.0",
    "japanize-matplotlib>=1.1.3",
    "ipywidgets>=8.1.5",
]
